2005-04-12  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Richard.

	- use custom single-threaded malloc for all non-GC JavaScriptCore
	allocations, for a 9.1% speedup on JavaScript iBench
	 
	* khtml/ecma/kjs_binding.cpp:
        (UString::UString):
        * khtml/ecma/kjs_proxy.cpp:
        (KJSProxyImpl::evaluate):

2005-04-15  David Hyatt  <hyatt@apple.com>

	Fix the six pixel gap between rows nine and ten of the Acid2 test.  Make sure that percentage heights that
	resolve to auto are properly treated as though they have auto height by the self-collapsing block check (as per
	section 8.3.1, paragraph 7 of the CSS2.1 spec).
	
        * khtml/rendering/render_block.cpp:
        (khtml::RenderBlock::isSelfCollapsingBlock):

2005-04-15  David Hyatt  <hyatt@apple.com>

	The Acid2 test and the reference rendering both make use of overflow:hidden on the <html> element.  Turns out
	the CSS2.1 wording for this behavior has been revised (based off WinIE/Mozilla behavior).  Change our behavior
	to match and make <html> overflow apply to the viewport.
	
        * khtml/khtmlview.cpp:
        (KHTMLView::applyOverflowToViewport):
        (KHTMLView::layout):
        * khtml/khtmlview.h:
        * khtml/rendering/render_box.cpp:
        (RenderBox::setStyle):

2005-04-14  David Hyatt  <hyatt@apple.com>

	3258403 and 3258402 can now be fixed.  min/max-width/height support is now complete.  This patch makes them
	work for positioned elements and enables us to pass row one of the Acid2 test.
	
        * khtml/rendering/render_box.cpp:
        (RenderBox::calcAbsoluteHorizontal):
        (RenderBox::calcAbsoluteHorizontalValues):
        (RenderBox::calcAbsoluteVertical):
        (RenderBox::calcAbsoluteVerticalValues):
        * khtml/rendering/render_box.h:

2005-04-12  David Hyatt  <hyatt@apple.com>

	Working on the Acid2 test, Row 1.

	Improve checkChild for the DTD so that it knows what mode a document is in.  This allows it to adhere more